Added more examples in chapter 3. Added wrapfigures to the PDF version. Improved formatting of examples in the PDF version.

--- a/_output.yml
+++ b/_output.yml
@@ -17,3 +17,5 @@ bookdown::pdf_book:
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
+  extra_dependencies: ["float", "wrapfig", "caption"]
+
