--- a/_output.yml
+++ b/_output.yml
@@ -1,18 +1,23 @@
 bookdown::gitbook:
   toc_depth: 4
   css: style.css
+  anchor_sections: true
   config:
-    sharing: null
+    sharing:
+        twitter: yes
+        facebook: no
     toc:
       scroll_highlight: yes
       before: |
-        <li><a href="./">Applied Philosophy of Science and Data Ethics</a></li>
+        <li><a href="./"><strong>Applied Philosophy of Science and Data Ethics</strong><br>by Carlos Vega</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+          <li><a href="https://bookdown.org" target="_blank">Built with Bookdown + RStudio</a></li>
+          <li><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a></li>
     download: ["pdf"]
 bookdown::pdf_book:
   toc_depth: 4
   papersize: a4
+  split_bib: true
   includes:
     in_header: preamble.tex
     before_body: before_body.tex
