--- a/_output.yml
+++ b/_output.yml
@@ -9,7 +9,7 @@ bookdown::gitbook:
     toc:
       scroll_highlight: yes
       before: |
-        <li><a href="./"><strong>Applied Philosophy of Science and Data Ethics</strong><br>by Carlos Vega</a></li>
+        <li><a href="./"><strong>APPLIED PHILOSOPHY OF SCIENCE </br>AND DATA ETHICS</strong></a></li>
       after: |
           <li><a href="https://bookdown.org" target="_blank">Built with Bookdown + RStudio</a></li>
           <li><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a></li>
