--- a/_output.yml
+++ b/_output.yml
@@ -3,9 +3,7 @@ bookdown::gitbook:
   css: style.css
   anchor_sections: true
   config:
-    sharing:
-        twitter: yes
-        facebook: no
+    sharing: false
     toc:
       scroll_highlight: yes
       before: |
